deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-microservice
  namespace: default
  labels:
    app: fastapi-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-microservice
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: fastapi-microservice
        track: canary
    spec:
      containers:
        - name: fastapi-microservice
          image: 058264079741.dkr.ecr.ap-south-1.amazonaws.com/fastapi-microservice:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
      imagePullSecrets:
        - name: ecr-secret
