service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-microservice
  namespace: default
spec:
  selector:
    app: fastapi-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
